# harryv2

./: README.md
HarryPotter/HarryPotter/: bot_data.db  main.py  pyproject.toml  replit.md
HarryPotter/HarryPotter/attached_assets/: Pasted-026-01-31-21-08-03-ERROR-discord-app-commands-tree-Igno_1769893694703.txt  Pasted-2026-01-31-21-07-06-ERROR-discord-app-commands-tree-Ign_1769893643391.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-worksp_1769893505910.txt
HarryPotter/HarryPotter/logs/conversations/1217664752621457458_1whisqy/roleplay/: 2026-02-02.txt
HarryPotter/HarryPotter/logs/conversations/1266669675559784570_zaria_princess/chatting/: 2026-02-02.txt
HarryPotter/HarryPotter/logs/conversations/1267881194591359088_r.nbo/chatting/: 2026-02-02.txt
HarryPotter/HarryPotter/logs/conversations/597901571770155052_sunny_omori21/chatting/: 2026-02-02.txt
