[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "discord-py>=2.6.4",
    "openai>=2.8.1",
    "pynacl>=1.6.1",
    "python-dotenv>=1.2.1",
    "spotipy>=2.25.2",
    "yt-dlp>=2025.11.12",
]
